# c_code_extractor

./: .gitattributes  .gitignore  NOTES.md  pyproject.toml  set_up_git.xsh
.devcontainer/: Dockerfile  devcontainer.json
collected/: zstd-1.5.6-expanded.tar.xz  zstd-1.5.6.tar.xz  zstd_1.5.6-compilation.xlsx  zstd_1.5.6_expand_log.jsonl  zstd_1.5.6_expanded_funcs.json  zstd_1.5.6_extracted.tar.xz  zstd_1.5.6_func_depends.jsonl  zstd_1.5.6_funcs.json  zstd_manual_resolve.json
src/c_code_extractor/: __main__.py  ast_analyze.py  code_item.py  defs.py  expand_macro.py  expand_macro_depre.py  extract_code.py  extract_func.py  filter_collected_funcs.py  lsp_client.py  lsp_server.py  merge_jsonl.py  rw_lock.py  scan_funcs.py  trace_func_depends.py  trace_func_depends_depre.py  util.py
