[tool.poetry]
name = "c-code-extractor"
version = "0.1.0"
description = ""
authors = ["Chuyang Chen <chuyangchen2018@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
tree-sitter = "^0.23.2"
tree-sitter-c = "^0.23.2"
tqdm = "^4.67.0"
multilspy = {url = "https://github.com/microsoft/multilspy/archive/main.zip"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
